feat: multiple improvements to version endpoint
* add a few new fields to the version model
* ensure that a newly released version is always unique
* implement the upload version file endpoint
